# AIGCPromptCollector

./: .env.example  .gitignore  LICENSE  README.md  app.py  backfill_model.py  cleanup_small_images.py  download_x_prompt.py  download_xhs.py  download_xhs_prompt.py  fix_bad_titles.py  main.py  pyproject.toml  save_login.py  save_login_x.py
templates/: index.html
